# libudfread-MSVC

./: .gitignore  CMakeLists.txt  cmake_config.h.in  version.rc.in
cmake/: CheckLargeFile.cmake
examples/: udfls.c
src/: default_blockinput.c  udfread-version.h.in  udfread.h
